Allowing atoms to be dropped only in non-visible sections and preventing particles/grid to be dropped in non-visible sections

--- a/platforms/common/scss/admin/_layout-manager.scss
+++ b/platforms/common/scss/admin/_layout-manager.scss
@@ -185,7 +185,25 @@
             .g-grid {
                 background: $white;
                 &:empty:after {
-                    content: "Drop non-visible particles here...";
+                    content: "Drop non-visible atoms here...";
+                }
+
+                &:hover:not(:empty):not(.no-hover):before, &:hover:not(:empty):not(.no-hover):not(.no-gear):after {
+                    display: none;
+                }
+
+                &:hover > .g-block {
+                    > .particle, > .position, > .spacer, > .pagecontent {
+                        &:after {
+                            display: none;
+                        }
+                    }
+                }
+
+                .g-block:last-child {
+                    .particle, .position, .spacer, .pagecontent, .atom {
+                        margin-right: 0;
+                    }
                 }
             }
         }
